<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.example.hometask.viewmodel.CreateProductViewModel" />
    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.CreateProductActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:theme="@style/AppTheme.AppBarOverlay"
            tools:ignore="MissingConstraints">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/CustomFontStyle"
                    android:text="@string/create_product"/>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorLightGray"
            android:scrollbars="none"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:id="@+id/root_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="11sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="3dp"/>

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.etName}"
                    android:textSize="15sp"
                    android:imeOptions="actionNext"
                    android:background="@drawable/edit_text_border"
                    android:padding="8dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textSize="11sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="3dp"/>

                <EditText
                    android:id="@+id/et_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.etDescription}"
                    android:textSize="15sp"
                    android:imeOptions="actionNext"
                    android:background="@drawable/edit_text_border"
                    android:padding="8dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regular_price"
                    android:textSize="11sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="3dp"/>

                <EditText
                    android:id="@+id/et_regular_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.etRegularPrice}"
                    android:textSize="15sp"
                    android:inputType="numberDecimal"
                    android:imeOptions="actionNext"
                    android:background="@drawable/edit_text_border"
                    android:padding="8dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sale_price"
                    android:textSize="11sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="3dp"/>

                <EditText
                    android:id="@+id/et_sale_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.etSalePrice}"
                    android:textSize="15sp"
                    android:inputType="numberDecimal"
                    android:imeOptions="actionNext"
                    android:background="@drawable/edit_text_border"
                    android:padding="8dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/color"
                    android:textSize="11sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="3dp"/>

                <EditText
                    android:id="@+id/et_colors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.etColor}"
                    android:textSize="15sp"
                    android:hint="@string/color_code_hint"
                    android:imeOptions="actionNext"
                    android:background="@drawable/edit_text_border"
                    android:padding="8dp"
                    android:layout_centerVertical="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/store"
                    android:textSize="11sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="3dp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_stores"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.etStores}"
                        android:textSize="15sp"
                        android:imeOptions="actionNext"
                        android:background="@drawable/edit_text_border"
                        android:padding="8dp"
                        android:hint="@string/store_key_hint"
                        android:layout_marginRight="120dp"
                        android:layout_centerVertical="true"/>

                    <Button
                        android:id="@+id/btn_stores"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:text="@string/enter"
                        android:textAllCaps="false"
                        android:layout_alignParentRight="true"
                        android:onClick="@{()-> viewModel.onEnterStore()}"/>

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    android:layout_marginTop="5dp"
                    android:text="@{viewModel.storeName}"
                    android:layout_below="@id/et_stores"/>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="3dp">

                    <Button
                        android:id="@+id/btn_upload_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/upload_image"
                        android:textAllCaps="false"
                        android:onClick="@{()-> viewModel.onUploadImage()}"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="11sp"
                        android:text="@{viewModel.imageName}"/>

                </LinearLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:theme="@style/CustomFontStyle"
                    android:layout_gravity="center"
                    android:layout_margin="60dp"
                    android:background="@drawable/button_border"
                    android:onClick="@{()->viewModel.onSubmit()}"/>

            </LinearLayout>

        </ScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
